<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_login"
        android:id="@+id/maButtonLogin"
        android:layout_below="@+id/maTextViewWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_register"
        android:id="@+id/maButtonRegister"
        android:layout_below="@+id/maButtonLogin"
        android:layout_centerHorizontal="true"
        android:onClick="register"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_update"
        android:id="@+id/maButtonUpdate"
        android:layout_below="@+id/maButtonRegister"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_delete"
        android:id="@+id/maButtonDelete"
        android:layout_below="@+id/maButtonUpdate"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_welcome"
        android:id="@+id/maTextViewWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
